# LongestIncSeq

./: CMakeLists.txt  LICENSE  README.md
apps/: LongestIncSeq.cpp
data/: sequence.data  sequence_error.data
include/: FloatSequence.hpp  SequenceAnalyser.hpp
src/: FloatSequence.cpp  SequenceAnalyserCPU.cpp  SequenceAnalyserCUDA.cu
tests/: CMakeLists.txt  SequenceAnalyserCPUTest.cpp  SequenceAnalyserTest.cpp
